# identicon_generator

./: Cargo.toml
src/: main.rs
