[package]
name = "identicon_generator"
version = "0.1.0"
authors = ["xoltia <38849891+xoltia@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = "0.13"
tokio = { version = "0.2", features = ["full", "rt-core"]}
futures = "0.3"
image = "0.23.4"
rust-crypto = "0.2.36"